--- a/tegel/src/components/block/block.scss
+++ b/tegel/src/components/block/block.scss
@@ -1,9 +1,17 @@
 @import 'block-theme-vars';
 @import '../../mixins/box-sizing';
 
+:host,
+:root {
+  --sdds-block-bg-primary: var(--sdds-grey-50);
+  --sdds-block-bg-primary-nested: var(--sdds-white);
+  --sdds-block-bg-secondary: var(--sdds-white);
+  --sdds-block-bg-secondary-nested: var(--sdds-grey-50);
+}
 .sdds-block {
   @include sdds-box-sizing;
 
+  color: var(--sdds-block-color);
   border-radius: 4px;
   padding: 16px;
   font: var(--sdds-body-01);
